PG: only mark_clean if we are active and not just peered

Fixes: http://tracker.ceph.com/issues/19023
Signed-off-by: Samuel Just <sjust@redhat.com>